--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -58,9 +58,9 @@
         
       </div>
     </div>
-    <!-- <div class="attribution">
+    <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+    Coded by <a href="#">Akash</a>.
+  </div>
   </body>
 </html>
