made some changes

--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -36,7 +36,11 @@
     <div class="card">
       <div class="content">
         <div class="illustration">
-          <img class="illustration-img" width="320px" src="assets/images/illustration-article.svg" />
+          <img
+            class="illustration-img"
+            width="320px"
+            src="assets/images/illustration-article.svg"
+          />
         </div>
         <div class="info">
           <div class="category">
@@ -55,12 +59,14 @@
             <p class="author-name">Greg Hooper</p>
           </div>
         </div>
-        
       </div>
     </div>
     <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Akash</a>.
-  </div>
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a href="https://github.com/akssshh" target="_blank">Akash</a>.
+    </div>
   </body>
 </html>
